--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Title</title>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/react-dom.js"></script>
+    <script src="bower_components/babel/browser.js"></script>
 </head>
 <body>
-
+<div id="app"></div>
 </body>
 </html>
-<script></script>
+<script src="./1.react.js"></script>
 
