我是李修改了index文件

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="bower_components/babel/browser.js"></script>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">我是李</div>
 </body>
 </html>
 <script src="./1.react.js"></script>
