--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="bower_components/babel/browser.js"></script>
 </head>
 <body>
-<div id="app">我是sun</div>
+<div id="app">我是li</div>
 </body>
 </html>
 <script src="./1.react.js"></script>
